refactor(swagger): subistituindo Annotation por Attributes e extraindo para uma traits e modificando method loogout o AuthController
